@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+05/13/2016 Oleh Derevenko
+        * ICE Container class allocation strategy fixed to avoid reserving 
+          excess memory with large collections.
+
 05/10/2016 Oleh Derevenko
         * dSafeNormalize3 and dSafeNormalize4 functions changed to leave the
           parameter intact instead of replacing it with the X-axis unit in case 
